# cxx-histogram

./: CMakeLists.txt  README.md
scripts/: measure.sh  plot.plt  speedup_plot.plt
src/: bitmap.cxx  bitmap.h  hpctimer.c  join_threads.h  main.cxx  pixel.h
